<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0E0E0E"
    tools:context=".MainActivity">


    <ImageButton
        android:id="@+id/Alarm"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="684dp"
        android:background="#000000"
        android:contentDescription="@string/alarm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Clock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_access_alarm_24" />

    <ImageButton
        android:id="@+id/Clock"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="685dp"
        android:background="#000000"
        android:contentDescription="@string/clock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Timer"
        app:layout_constraintStart_toEndOf="@+id/Alarm"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_access_time_24" />

    <ImageButton
        android:id="@+id/Timer"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="688dp"
        android:background="#000000"

        android:contentDescription="@string/timer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Stopwatch"
        app:layout_constraintStart_toEndOf="@+id/Clock"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_hourglass_empty_24" />

    <ImageButton
        android:id="@+id/Stopwatch"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="681dp"
        android:background="#000000"
        android:contentDescription="@string/stopwatch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Timer"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_timer_24" />
</androidx.constraintlayout.widget.ConstraintLayout>