<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Timer_fragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="10sp"
        android:layout_height="90sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="161dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="248dp"
        android:text="@string/Extra"
        android:textColor="@android:color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/stop_timer_btn"
        app:layout_constraintEnd_toStartOf="@+id/text_timer_sec"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/text_timer_min"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.339" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="10sp"
        android:layout_height="90sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="161dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="352dp"
        android:text="@string/extra"
        android:textColor="@android:color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_timer_hr"
        app:layout_constraintHorizontal_bias="0.669"
        app:layout_constraintStart_toEndOf="@+id/text_timer_sec"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.285" />

    <EditText
        android:id="@+id/text_timer_sec"
        android:layout_width="90sp"
        android:layout_height="90sp"
        android:layout_marginStart="280dp"
        android:layout_marginEnd="41dp"
        android:autofillHints="00"
        android:hint="@string/Timer"
        android:inputType="number"
        android:text="@string/Timer"
        android:textColor="@android:color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.317" />

    <EditText
        android:id="@+id/text_timer_hr"
        android:layout_width="90sp"
        android:layout_height="90sp"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="284dp"
        android:autofillHints="00"
        android:hint="@string/Timer"
        android:inputType="number"
        android:text="@string/Timer"
        android:textColor="@android:color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.311" />

    <EditText
        android:id="@+id/text_timer_min"
        android:layout_width="90sp"
        android:layout_height="90sp"
        android:layout_marginStart="160dp"
        android:autofillHints="00"
        android:hint="@string/Timer"
        android:inputType="number"
        android:text="@string/Timer"
        android:textColor="@android:color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.313" />

    <ImageButton
        android:id="@+id/start_timer_btn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="193dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="194dp"
        android:layout_marginBottom="43dp"
        android:background="#000000"
        android:contentDescription="@string/start_timer_btn"
        android:src="@drawable/ic_baseline_play_arrow_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_timer_min"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/stop_timer_btn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="252dp"
        android:layout_marginBottom="43dp"
        android:background="#000000"
        android:contentDescription="@string/start_timer_btn"
        android:src="@drawable/ic_baseline_stop_24"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_timer_hr"
        app:layout_constraintVertical_bias="1.0"
        tools:visibility="visible" />




</androidx.constraintlayout.widget.ConstraintLayout>